@startuml classDiagram
skinparam Linetype ortho
skinparam groupInheritance 2

package "dashboard" {

    class Allergens_Dietary_Ictoria_Dashboard {
        - {static} $_instance : Allergens_Dietary_Ictoria_Dashboard
        + {static} instance() : Allergens_Dietary_Ictoria_Dashboard
        - __construct() : void
        + {static} adi_dashboard_style() : void
        + {static} adi_dashboard_script() : void
        + {static} autoload(class_name : String) : void
    }

    abstract class ADI_Base_Menu_Page {
        - $page_title : string
        - $menu_title : string
        - $capability : string
        - $menu_slug : string
        - $callback : callable
        - $icon_url : string
        - $position : int
        - $sections : array
        - {static} $instances : array
        + {static} instance() : ADI_Base_Menu_Page
        + __construct(page_title: string, menu_title: string, capability: string, menu_slug: string, callback: callable, icon_url: string, position: int)
        + register_menu() : void
        + register_settings() : void
        + render_page() : void
        + add_section(section: ADI_Base_Section) : void
        + validate_settings(input: mixed) : mixed
        # is_top_level() : bool
        # get_parent_slug() : string
    }

    abstract class ADI_Base_Section {
        - $section_id : string
        - $section_title : string
        - $fields : array
        - {static} $instances : array
        + {static} instance() : ADI_Base_Section
        + __construct(section_id: string, section_title: string)
        + register_section(menu_slug: string) : void
        + add_field(field_id: string, field_title: string, callback: callable, args: array) : void
        + section_callback() : void
    }

    class ADI_Dashboard_Main_Page {
        - __construct() : void
        + is_top_level() : bool
        + get_parent_slug() : string
    }

    class ADI_Dashboard_Settings_Page {
        - __construct() : void
        + is_top_level() : bool
        + get_parent_slug() : string
    }

    class ADI_Dashboard_Main_Section {
        - __construct() : void
        + example_field_callback(args: array) : void
    }

    class ADI_Dashboard_Settings_Section {
        - __construct() : void
        + field_callback(args: array) : void
    }

    ADI_Dashboard_Main_Page --|> ADI_Base_Menu_Page
    ADI_Dashboard_Settings_Page --|> ADI_Base_Menu_Page
    ADI_Dashboard_Main_Section --|> ADI_Base_Section
    ADI_Dashboard_Settings_Section --|> ADI_Base_Section

    Allergens_Dietary_Ictoria_Dashboard ..> ADI_Dashboard_Main_Page : "manages"
    Allergens_Dietary_Ictoria_Dashboard ..> ADI_Dashboard_Settings_Page : "manages"
    ADI_Base_Menu_Page *-r-> ADI_Base_Section : "has"
}

@enduml